001: now uses only one image for all configs, moved configs to BenchmarkPlan.defaultPlan, added support for effectiveJavaToolOptions and startupLogSnippet